[gd_scene load_steps=8 format=2]

[ext_resource path="res://tiles/basic-tile-1.png.png" type="Texture" id=1]
[ext_resource path="res://tiles/basic-tiles-2.png.png" type="Texture" id=2]
[ext_resource path="res://skelbunny/SkelBunny.tscn" type="PackedScene" id=3]
[ext_resource path="res://skelbunny/Health and energy/Energy_orb-1.png.png" type="Texture" id=4]
[ext_resource path="res://skelbunny/Health and energy/Healt_points-1.png.png" type="Texture" id=5]
[ext_resource path="res://Battle/Battle.gd" type="Script" id=6]
[ext_resource path="res://Battle/Background section 1/Backgrounds-1.png.png" type="Texture" id=7]

[node name="Battle" type="Node2D"]
script = ExtResource( 6 )

[node name="Backgrounds-1png" type="Sprite" parent="."]
position = Vector2( 514.363, 299.758 )
scale = Vector2( 31.9211, 18.5208 )
texture = ExtResource( 7 )

[node name="tile1" type="Sprite" parent="."]
position = Vector2( 77.4737, 539.644 )
scale = Vector2( 10, 8 )
texture = ExtResource( 2 )

[node name="tile2" type="Sprite" parent="."]
modulate = Color( 1, 0.992157, 0.992157, 1 )
position = Vector2( 188.474, 539.644 )
scale = Vector2( 10, 8 )
texture = ExtResource( 1 )

[node name="tile3" type="Sprite" parent="."]
position = Vector2( 299.474, 539.644 )
scale = Vector2( 10, 8 )
texture = ExtResource( 1 )

[node name="tile4" type="Sprite" parent="."]
position = Vector2( 410.474, 539.644 )
scale = Vector2( 10, 8 )
texture = ExtResource( 1 )

[node name="tile5" type="Sprite" parent="."]
position = Vector2( 521.474, 539.644 )
scale = Vector2( 10, 8 )
texture = ExtResource( 1 )

[node name="tile6" type="Sprite" parent="."]
position = Vector2( 632.474, 539.644 )
scale = Vector2( 10, 8 )
texture = ExtResource( 1 )

[node name="tile7" type="Sprite" parent="."]
position = Vector2( 743.474, 539.644 )
scale = Vector2( 10, 8 )
texture = ExtResource( 1 )

[node name="tile8" type="Sprite" parent="."]
position = Vector2( 854.474, 539.644 )
scale = Vector2( 10, 8 )
texture = ExtResource( 1 )

[node name="tile9" type="Sprite" parent="."]
position = Vector2( 965, 539.644 )
scale = Vector2( 10, 8 )
texture = ExtResource( 1 )

[node name="SkelBunny" parent="." instance=ExtResource( 3 )]
position = Vector2( 65.4702, 456.67 )
frame = 0

[node name="DeckPosition" type="Position2D" parent="."]
position = Vector2( 14.9641, 205.416 )

[node name="EnergyOrb" type="Sprite" parent="."]
position = Vector2( 961.212, 66.7357 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="EnergyOrb"]
margin_left = -0.575455
margin_top = -1.6138
margin_right = 7.42455
margin_bottom = 29.3862
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Healt_points-1png" type="Sprite" parent="."]
position = Vector2( 64.8712, 66.7357 )
scale = Vector2( 8, 8 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Healt_points-1png"]
margin_left = -1.30019
margin_top = -0.550664
margin_right = 6.69981
margin_bottom = 30.4493
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemyDelay" type="Timer" parent="."]
one_shot = true

[node name="end_turn" type="Button" parent="."]
margin_left = 367.867
margin_top = 17.7285
margin_right = 654.867
margin_bottom = 98.7285
text = "END TURN"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="enemyDelay" to="." method="_on_enemyDelay_timeout"]
[connection signal="pressed" from="end_turn" to="." method="_on_end_turn_pressed"]
